navbar on mobile fixed

--- a/public/styles/shared/navbar.css
+++ b/public/styles/shared/navbar.css
@@ -48,8 +48,7 @@ nav {
 
 nav ul {
   margin: 0;
-  padding: 0;
-  padding-bottom: 10px;
+  padding: 0 0 10px;
 
   background: white;
 }
@@ -69,7 +68,7 @@ nav a {
 }
 
 #nav:checked ~ nav {
-  max-height: 200px;
+  max-height: 400px;
 }
 
 @media only screen and (min-width: 700px) {
